apps/metabase/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
      annotations:
        homelab.dev/rollout-nonce: "2025-11-04-01"
    spec:
      containers:
        - name: metabase
          image: metabase/metabase@sha256:5b2d277b591b8303c51dd2a5d2d91ab5f27f12b2dc3a47adb2444e1e0a41f351
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /metabase-data
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              memory: 1536Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: metabase-data
